--- a/Fine_Tuning_with_Unsloth_(2).ipynb
+++ b/Fine_Tuning_with_Unsloth_(2).ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/danishnaseer00/codeminx/blob/main/Fine_Tuning_with_Unsloth_(2).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -1182,9 +1192,113 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!apt-get install git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XoodHXscb8hl",
+        "outputId": "e19b1d0e-9e56-407b-fc01-dd35565bb63a"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "git is already the newest version (1:2.34.1-1ubuntu1.15).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 35 not upgraded.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git config --global user.name \"danishnaseer00\"\n",
+        "!git config --global user.email \"danishmughal.dev@gmail.com\""
+      ],
+      "metadata": {
+        "id": "AyqPnEpkgBMp"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "\n",
+        "# Fetch the token from Colab secrets\n",
+        "try:\n",
+        "    GITHUB_TOKEN = userdata.get('GH-token')\n",
+        "    print(\"Token fetched successfully (length: {} characters)\".format(len(GITHUB_TOKEN)))\n",
+        "except Exception as e:\n",
+        "    print(f\"Error fetching token: {e}\")\n",
+        "    print(\"Make sure you added the secret named 'GITHUB_TOKEN' in Colab secrets.\")\n",
+        "    GITHUB_TOKEN = None"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BbR3vtJBgJwj",
+        "outputId": "1f27e80f-bf9d-411b-db3f-e05ea5eec3aa"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Token fetched successfully (length: 93 characters)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "# Set up GitHub repository details\n",
+        "REPO_URL=\"https://github.com/danishnaseer00/codeminx.git\"\n",
+        "BRANCH=\"main\"\n",
+        "\n",
+        "# Create a new directory for the repo\n",
+        "mkdir Fine_tuned_phi\n",
+        "cd Fine_tuned_phi # Changed from my_model to Fine_tuned_phi\n",
+        "\n",
+        "# Initialize git\n",
+        "git init\n",
+        "git checkout -b $BRANCH\n",
+        "\n",
+        "# Copy all files from Colab environment (adjust paths as needed)\n",
+        "cp -r /content/* .\n",
+        "\n",
+        "# Add all files including notebook, model, and tokenizer\n",
+        "git add .\n",
+        "git commit -m \"Upload Colab notebook, fine-tuned model, and tokenizer\"\n",
+        "\n",
+        "# Add GitHub remote and push\n",
+        "git remote add origin $REPO_URL\n",
+        "git push -u origin $BRANCH"
+      ],
+      "metadata": {
+        "id": "y9zl2jeVe72G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "2GkUd-zDRED8"
+        "id": "mXECPtL5fdxu"
       },
       "execution_count": null,
       "outputs": []
@@ -1194,7 +1308,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
